--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: "Thomas Pratt"
-description: "Piano player, teacher & tinkerer"
+description: "I'm a computer science educator, hardware design nerd, and constant lesson planner."
